fix: add spacing to inline checkboxes

--- a/scripts/src/form/form.scss
+++ b/scripts/src/form/form.scss
@@ -51,6 +51,9 @@
         // transform: scale(1.0001);
         //border: 1px dotted grey;
     }
+    .checkbox-inline {
+        margin-right: 20px;
+    }
     .ccmt-cff-btn-array-add, .ccmt-cff-btn-array-remove {
         max-width: 200px !important;
         margin-right: 20px;
